# photoshare

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  TESTING.md  amplify.yml  clean-git-history.sh  deploy_web.sh  dev.sh  firebase.json  pubspec.yaml  render.yaml
.firebase/: hosting.YnVpbGQvd2Vi.cache
android/app/: build.gradle
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  Spacefile  deploy-railway.sh  deploy.sh  docker-compose.yml  elastic-beanstalk-policy.json  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  run_local.py  wsgi.py
backend/.elasticbeanstalk/: config.yml
backend/app/: main.py
backend/app/api/: jwt.py  sessions.py  uploads.py
backend/app/core/: config.py  init_aws.py  jwt.py  security.py
backend/app/models/: imageview.py  session.py
backend/app/services/: dynamodb.py  jwt.py
backend/app/utils/: password.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/debug/: auth_tester.dart  auth_tester_main.dart
lib/models/: cross_platform_image.dart
lib/screens/: auth_view.dart  home_screen.dart  photo_grid.dart  sessionModels.dart  session_view.dart  sessions_view.dart  settings.dart
lib/services/: api_service.dart  upload_service.dart
lib/utils/: router.dart  utils.dart
lib/widgets/: session_details_card.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
(+4 files in other folders)
